# ProxyCanary

./: .gitignore  01-system-prompt-harness.md  README.md  eval_result.txt  eval_results_qwen3.5_9b-q4_K_M.json  eval_results_qwen3_0.6b.json  prompt.txt  pyproject.toml  后续参考攻击策略.md  后续投稿策略.md  实验note.md
benchmark/: baselines.py  check_fn.py  cross_prompt_evaluator.py  evaluator.py  final_evaluator.py  full_evaluator.py  multi_turn_evaluator.py  run_evaluation.py  statistics.py
benchmark/data/: attack_splits.json  normal_conversations.json  normal_splits.json
docs/: DESIGN.md  PLAN.md  experiment_report.md  figures_optimization_plan.md  final_experiment_report.md  little_canary_comparison.md  paper.tex  paper_draft.md  paper_en.md  paper_en.tex  paper_revision_plan.md  research_roadmap.md  test_expansion_plan.md  审批意见.md
docs/superpowers/plans/: 2026-06-21-guard4promptattack-mvp.md  2026-06-23-experiment-plan.md
docs/superpowers/specs/: 2026-06-21-guard4promptattack-design.md  2026-06-23-related-work.md  2026-06-23-three-branch-refusal-detector.md
figures/: plot_fig1.py  plot_fig1_new.py  plot_fig2.py  plot_fig2_new.py  plot_fig3_new.py  plot_fig4.py  plot_fig4_new.py  plot_results.py
guard4promptattack/: __init__.py  config.py  exceptions.py  types.py
guard4promptattack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
guard4promptattack/canary/: detector.py  llm.py  prompt.py  refusal_detector.py
tests/: test_check.py  test_config.py  test_detector.py  test_llm.py  test_prompt.py  test_refusal_detector.py
