[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guard4promptattack"
version = "0.1.0"
description = "金丝雀诱饵策略的提示词攻击检测库"
authors = [{name = "JucieOvo"}]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["guard4promptattack*"]
